--- a/Page.html
+++ b/Page.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina</title>
     <link rel="stylesheet" href="css/page.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width:500px)">
 </head>
 <body>
     
  <!--MENU.FLEXBOX-->
      
         <header>
-            <h1>Jogos antigos</h1>
+            <h1>Meu Site</h1>
                 <nav>
-                    <a href="#">Super Mario</a>
-                    <a href="#">outro      </a>
-                    <a href="#">about      </a>
+                    <a href="#">objeto1</a>
+                    <a href="#">objeto2</a>
+                    <a href="#">objeto3</a>
+                    <a href="#">objeto4</a>
+                    <a href="#">objeto5</a>
+                    <a href="#">objeto6</a>
                 </nav>
         </header>
 
@@ -31,8 +35,6 @@
                 <img src="img/i.jpg" alt=""></div>
                 <div class="imagem">
                 <img src="img/jogo.jpg" alt=""></div>
-                <div class="imagem">
-                <img src="img/m.jpg" alt=""></div>
             </div>
         </main>
 
